--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 body {
     background-color: #aad1e0;
   }
-  
 
+  /*  
 main {
-  max-width: 840px;
-  
+  max-width: 840px;  
 }
+*/
 
 aside {
   margin: 1em;
